...
import com.android.joinme.ui.theme.Dimens
import com.android.joinme.ui.theme.customColors
import kotlinx.coroutines.launch

object CreateEventScreenTestTags {
  const val INPUT_EVENT_TYPE = "inputEventType"
  const val INPUT_EVENT_TITLE = "inputEventTitle"
  const val INPUT_EVENT_DESCRIPTION = "inputEventDescription"
  const val INPUT_EVENT_LOCATION = "inputEventLocation"
  const val INPUT_EVENT_LOCATION_SUGGESTIONS = "inputEventLocationSuggestions"
  const val FOR_EACH_INPUT_EVENT_LOCATION_SUGGESTION = "inputEventLocationSuggestions"
  const val INPUT_EVENT_MAX_PARTICIPANTS = "inputEventMaxParticipants"
  const val INPUT_EVENT_DURATION = "inputEventDuration"
...
          invalidMaxParticipantsMsg = uiState.invalidMaxParticipantsMsg,
          invalidDurationMsg = uiState.invalidDurationMsg,
          invalidDateMsg = uiState.invalidDateMsg,
          invalidVisibilityMsg = uiState.invalidVisibilityMsg)

  EventFormScreen(
      title = "Create Event",
      formState = formState,
      testTags = testTags,
      onTypeChange = { createEventViewModel.setType(it) },
      onTitleChange = { createEventViewModel.setTitle(it) },
      onDescriptionChange = { createEventViewModel.setDescription(it) },
      onLocationQueryChange = { createEventViewModel.setLocationQuery(it) },
...
